# holi-yew

./: .env  .gitignore  Cargo.toml  index.html  index.scss  start_frontend.sh  start_holi.sh  start_holiapi.sh
backend/: __main__.py  app.py  config.py  edit.py  entries.py  filter_tags.py  logger.py  pdf_save.py  upload.py  user.py  utils.py
backend/db/: setup_db.py  user_schema.sql
backend/holiapi/: App.py  auth.py  config.py  logger.py  pdf_save.py  upload.py  user.py  users.py  utils.py
backend/holiapi/db/: db_fns.py  entry_info.py  entry_schema.sql  setup_db.py  user_schema.sql
backend/holiapi/entries/: delete.py  edit.py  entries.py  favo.py  filter_tags.py
backend/holiapi/favo/: favo.py  favo_entries.py  unfavo.py
backend/tests/: test_db.py  test_delete_entry.py  test_user_info_from_raw.py  test_utils.py
frontend/: .env  Cargo.toml  README.md  index.html  index.scss
frontend-serve/: Cargo.toml
frontend-serve/src/: main.rs
frontend/src/: app.rs  error.rs  lib.rs  main.rs  utils.rs
frontend/tests/: test.rs
holiapi-rs/: Cargo.toml
holiapi-rs/src/: auth.rs  db.rs  jwt.rs  main.rs  user.rs
holiapi-rs/src/db/: models.rs  schema.rs
src/: app.rs  error.rs  lib.rs  main.rs  text_input.rs
src/api/: mod.rs
src/components/: auth.rs  card_group.rs  footer.rs  mod.rs  navbar.rs  no_auth.rs  pagination.rs  resend_token.rs  search_bar.rs  user_context_provider.rs
src/hooks/: use_user_context.rs
src/routes/: entries.rs  htl_auth.rs  login.rs  logout.rs  mod.rs  page_not_found.rs  show_upload.rs  upload.rs  user_panel.rs
tests/: test.rs
(+36 files in other folders)
