[package]
name = "holi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yew-router = "0.16"
js-sys = "0.3.46"
gloo = "0.4"
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent"] }
wasm-bindgen = "0.2"
reqwest = { version = "0.11", features = ["json", "blocking"] }
thiserror = "1"
dotenv_codegen = "0.15.0"
serde = "1.0.145"
yew-hooks = "0.1"
log = "0.4.6"
lazy_static = "1.4.0"
parking_lot = "0.10.0"
wasm-logger = "0.2.0"
#gloo-net = "0.2"
wasm-bindgen-futures = "0.4"