[package]
name = "holiapi-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.6.1", features = ["headers"]}
headers = "0.3"
jsonwebtoken = "8.0"
once_cell = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
diesel = {version="2.0.2", features=["sqlite"]}
reqwest = { version = "0.11", features = ["json"] } 